--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/JuanDhers/clima",
+  "homepage": "https://juandhers.github.io/clima/",
   "name": "clima",
   "version": "0.1.0",
   "private": true,
